--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,4 +3,8 @@
     <style name="Theme.MotoTool" parent="Theme.MaterialComponents.Light.NoActionBar">
 
     </style>
+    <style name="windowAnim" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/ver_tran_in</item>
+        <item name="android:windowExitAnimation">@anim/ver_tran_out</item>
+    </style>
 </resources>
