--- a/app/src/main/res/layout/item_bill_member.xml
+++ b/app/src/main/res/layout/item_bill_member.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_btn_member"
     android:layout_marginVertical="10dp"
-    android:layout_height="30dp">
+    android:layout_marginHorizontal="5dp"
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/tv_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -12,7 +13,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_height="30dp"
         android:textColor="@color/white"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="24dp"
@@ -21,7 +23,8 @@
         android:id="@+id/iv_del"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="26dp"
-        android:layout_height="match_parent"
+        android:layout_height="30dp"
+        app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/ic_delete"
         android:paddingVertical="9dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
